--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -221,7 +221,7 @@
   <string name="FRI">Vendredi</string>
   <string name="FRI_1">Tous Les Vendredis</string>
   <string name="FRI_2">Vendredis</string>
-  <string name="FRI_Hisvideo_Timeselector">Vendredis</string>
+  <string name="FRI_Hisvideo_Timeselector">Ven</string>
   <string name="FROME">De</string>
   <string name="Fail_Record">Échec de l\'enregistrement</string>
   <string name="Feb">Feb.</string>
@@ -311,7 +311,7 @@
   <string name="MONTHS">mois</string>
   <string name="MON_1">Tous Les Lundis</string>
   <string name="MON_2">Lundis</string>
-  <string name="MON_Hisvideo_Timeselector">Lundis</string>
+  <string name="MON_Hisvideo_Timeselector">Lun</string>
   <string name="MSG_BIND">L\'appareil a été rajouté</string>
   <string name="MSG_BOTTOM_LINE">Du bas</string>
   <string name="MSG_DELETE_TITLE">On ne peut pas restaurer après avoir supprimé</string>
@@ -485,7 +485,7 @@
   <string name="SAT">Samedi</string>
   <string name="SAT_1">Tous Les Samedis</string>
   <string name="SAT_2">Samedis</string>
-  <string name="SAT_Hisvideo_Timeselector">Samedis</string>
+  <string name="SAT_Hisvideo_Timeselector">Sam</string>
   <string name="SAVE">Effectué</string>
   <string name="SAVED_PHOTOS">Enregistré dans l\'album</string>
   <string name="SCENE_ADDED">%s ajouté</string>
@@ -554,7 +554,7 @@
   <string name="SUN">Dimanche</string>
   <string name="SUN_1">Tous Les Dimanches</string>
   <string name="SUN_2">Dimanches</string>
-  <string name="SUN_Hisvideo_Timeselector">Dimanches</string>
+  <string name="SUN_Hisvideo_Timeselector">Dim</string>
   <string name="SURE">OK</string>
   <string name="SURE_DELETE">Vous êtes sûr de vouloir supprimer?</string>
   <string name="SURE_DELETE_1">Vous êtes sûr de vouloir supprimer le compte \"%s\" et les données associées?</string>
@@ -594,7 +594,7 @@
   <string name="THU">Jeudi</string>
   <string name="THU_1">Tous Les Jeudis</string>
   <string name="THU_2">Jeudis</string>
-  <string name="THU_Hisvideo_Timeselector">Jeudis</string>
+  <string name="THU_Hisvideo_Timeselector">Jeu</string>
   <string name="TIME">Temps</string>
   <string name="TIMEOUT_TRY_AGIN">Connexion timeout \n Essayer à nouveau</string>
   <string name="TIMEZONE_CHOOSE">Fuseau Horaire</string>
@@ -606,7 +606,7 @@
   <string name="TUE">Mardi</string>
   <string name="TUE_1">Tous Les Mardis</string>
   <string name="TUE_2">Mardis</string>
-  <string name="TUE_Hisvideo_Timeselector">Mardis</string>
+  <string name="TUE_Hisvideo_Timeselector">Mar</string>
   <string name="TURN_ON_PROTECTION">Lorsque la protection sécurisée est activée, la détection de mouvement se met en marche automatiquement et des alertes sont envoyés selon le réglage de l\'intervalle de temps.</string>
   <string name="Tap0_AlreadyEmailed">Un Email a été envoyé à</string>
   <string name="Tap0_Authorizationfailed">Échec de l\'autorisation, s\'il vous plaît essayer à nouveau.</string>
@@ -937,7 +937,7 @@
   <string name="WED">Mercredi</string>
   <string name="WED_1">Tous Les Mercredis</string>
   <string name="WED_2">Mercredis</string>
-  <string name="WED_Hisvideo_Timeselector">Mercredis</string>
+  <string name="WED_Hisvideo_Timeselector">Mer</string>
   <string name="WEEK">Semaine</string>
   <string name="WEEKDAYS">Jours ouvrables</string>
   <string name="WEEKEND">Week&#8211;end</string>
