--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -221,7 +221,7 @@
   <string name="FRI">Cuma</string>
   <string name="FRI_1">Cuma</string>
   <string name="FRI_2">Cuma</string>
-  <string name="FRI_Hisvideo_Timeselector">Cuma</string>
+  <string name="FRI_Hisvideo_Timeselector">Cum</string>
   <string name="FROME">den</string>
   <string name="Fail_Record">Kayıt başarısız</string>
   <string name="Feb">Feb.</string>
@@ -311,7 +311,7 @@
   <string name="MONTHS">ay</string>
   <string name="MON_1">Pazartesi</string>
   <string name="MON_2">Pazartesi</string>
-  <string name="MON_Hisvideo_Timeselector">Pazartesi</string>
+  <string name="MON_Hisvideo_Timeselector">Pzt</string>
   <string name="MSG_BIND">Cihaz başarılı bir şekilde eklendi</string>
   <string name="MSG_BOTTOM_LINE">Alttaki</string>
   <string name="MSG_DELETE_TITLE">Silindikten sonra geri çağrılamaz</string>
@@ -485,7 +485,7 @@
   <string name="SAT">Cumartesi</string>
   <string name="SAT_1">Cumartesi</string>
   <string name="SAT_2">Cumartesi</string>
-  <string name="SAT_Hisvideo_Timeselector">Cumartesi</string>
+  <string name="SAT_Hisvideo_Timeselector">Cut</string>
   <string name="SAVE">Yapıldı</string>
   <string name="SAVED_PHOTOS">Fotoğraflara kaydedildi</string>
   <string name="SCENE_ADDED">\"%s\" Başarılı bir şekilde eklendi</string>
@@ -554,7 +554,7 @@
   <string name="SUN">Pazar</string>
   <string name="SUN_1">Pazar</string>
   <string name="SUN_2">Pazar</string>
-  <string name="SUN_Hisvideo_Timeselector">Pazar</string>
+  <string name="SUN_Hisvideo_Timeselector">Paz</string>
   <string name="SURE">TAMAM</string>
   <string name="SURE_DELETE">Silmek istediğinizden emin misiniz?</string>
   <string name="SURE_DELETE_1">%s hesabını ve ilgili veriyi silmek istediğinizden emin misiniz?</string>
@@ -594,7 +594,7 @@
   <string name="THU">Perşembe</string>
   <string name="THU_1">Perşembe</string>
   <string name="THU_2">Perşembe</string>
-  <string name="THU_Hisvideo_Timeselector">Perşembe</string>
+  <string name="THU_Hisvideo_Timeselector">Per</string>
   <string name="TIME">Zaman</string>
   <string name="TIMEOUT_TRY_AGIN">Bekleme&#8211;zamanaşımı \n lütfen tekrar deneyin</string>
   <string name="TIMEZONE_CHOOSE">Zaman bölgesi</string>
@@ -606,7 +606,7 @@
   <string name="TUE">Salı</string>
   <string name="TUE_1">Salı</string>
   <string name="TUE_2">Salı</string>
-  <string name="TUE_Hisvideo_Timeselector">Salı</string>
+  <string name="TUE_Hisvideo_Timeselector">Sal</string>
   <string name="TURN_ON_PROTECTION">Güvenlik Koruması açıkken hareket algılama otomatik olarak açılacaktır ve zaman aralığı ayarlamasına göre alarmlar gönderecektir.</string>
   <string name="Tap0_AlreadyEmailed">Için zaten e&#8211;postayla gönderildi</string>
   <string name="Tap0_Authorizationfailed">Yetki başarısız, lütfen tekrar deneyiniz</string>
@@ -937,7 +937,7 @@
   <string name="WED">Çarşamba</string>
   <string name="WED_1">Çarşamba</string>
   <string name="WED_2">Çarşamba</string>
-  <string name="WED_Hisvideo_Timeselector">Çarşamba</string>
+  <string name="WED_Hisvideo_Timeselector">Çar</string>
   <string name="WEEK">Her</string>
   <string name="WEEKDAYS">Haftaiçi</string>
   <string name="WEEKEND">Haftasonu</string>
